--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "action-demo",
+  "homepage": "https://hotmanxp.github.io/actions-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
