--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@master
 
+    - name: ESLint checks
+      uses: gimenete/eslint-action@1.0
+
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@master
       env:
